--- a/README.org
+++ b/README.org
@@ -8,7 +8,7 @@ Currently only src_elisp{fancy-ffap-menu-list-urls} works.
 
 If you have any questions to ask, bugs to report, or features to suggest, use [[https://codeberg.org/kakafarm/emacs-fancy-ffap-menu/issues/new][the Codeberg issue tracker]].
 
-If you have patches to submit, please send them on [[https://codeberg.org/kakafarm/emacs-fancy-ffap-menu/pulls][the Codeberg pull requests thingamabob].
+If you have patches to submit, please send them on [[https://codeberg.org/kakafarm/emacs-fancy-ffap-menu/pulls][the Codeberg pull requests thingamabob]].
 
 ** Support.
 
